moved teh price search to a new application

--- a/find_price_testing.ipynb
+++ b/find_price_testing.ipynb
@@ -1419,27 +1419,66 @@
     "hidePrompt": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# time_pattern = '[0-9]{1,2}\\.[0-9]{1,2}[ap]'\n",
+    "# df['time_in_price'] = df['listing.priceDetails.displayPrice'].str.findall(time_pattern)\n",
+    "\n",
+    "# # Replace the time in the display price\n",
+    "# mask = ~df['time_in_price'].str[0].isnull()\n",
+    "# df.loc[mask, 'listing.priceDetails.displayPrice'] = \\\n",
+    "#     df[mask]['listing.priceDetails.displayPrice'].str.replace(df['time_in_price'][df[mask].index[0]][0],'')\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "listing.priceDetails.displayPrice    Inspect Sat 2:30-3:00pm\n",
+       "fromPrice                                                230\n",
+       "toPrice                                                  300\n",
+       "Name: 72, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# indicies = [72, 80, 146, 159, 210]\n",
+    "# df.loc[72][['listing.priceDetails.displayPrice', 'fromPrice', 'toPrice']]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 959,
+   "execution_count": 15,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2:30', '3:00']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# time_pattern = '\\d:\\d{2}' #'[0-9]{1,2}\\.[0-9]{1,2}[ap]'\n",
+    "# re.findall(time_pattern,df.loc[72]['listing.priceDetails.displayPrice']) #.findall(time_pattern)\n"
+   ]
   },
   {
    "cell_type": "code",
